2010-12-04  Romain Francois <romain@r-enthusiasts.com>

    * inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: documentation patch by 
    Christian Gunnning <xian@unm.edu>
    
    * inst/include/Rcpp/vector/matrix.h: fix SubMatrix. Bug reported by 
    Christian Gunnning <xian@unm.edu> on Rcpp-devel

2010-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.RObject.R: fix 'inherits' test added today

	* inst/include/Rcpp/module/Module_generated_Constructor.h: Applied
	patch by Tama Ma <pingnang@phys.ethz.ch> for up to seven args in ctor
	* inst/include/Rcpp/module/Module_generated_class_constructor.h: Idem
	* inst/include/Rcpp/module/Module_generated_ctor_signature.h: Idem

2010-12-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/RObject.h : new inline method inherits that
	checks if an object inherits from a given class (wrapper around
	Rf_inherits)

	* inst/unitTests/runit.RObject.R: unit test for the above

2010-12-02  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Rcpp/generated/Function__operator.h,
	  inst/include/Rcpp/Function.h: operator() becomes const.

2010-11-29  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: trying to please suncc after
	CRAN checks

	* R/Module.R: protect the module$refClassGenerators <- generators
	line against the case where there are no classes (triggered a
	problem with the parser package)

2010-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.9

        * debian/*: Similarly updated for new release to Debian

2010-11-26  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: List::create( _["foo"] ) sets
	the SEXP to R_MissingArg, usueful for formal arguments
	specifications, simpler form than List::create( _["foo"] =
	R_MissingArg )

	* inst/include/Rcpp/macros/unroll.h: helper macro RCPP_UNROLL_LOOP

	* inst/include/Rcpp/vector/MatrixColumn.h: added
	MatrixColumn::operator=( MatrixColumn& ) otherwise it gets