@@ -5,6 +5,8 @@
     
     * inst/include/Rcpp/vector/matrix.h: fix SubMatrix. Bug reported by 
     Christian Gunnning <xian@unm.edu> on Rcpp-devel
+    
+    * inst/include/Rcpp/vector/SubMatrix.h: factored out of matrix.h
 
 2010-12-03  Dirk Eddelbuettel  <edd@debian.org>
 
